[tool.poetry]
name = "python_betting_game"
version = "0.1.0"
description = ""
authors = ["S. Zachariah Sprackett <zac@sprackett.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tabulate = "^0.8.10"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
